# proteus

./: .copier-answers.yml  .gitignore  pyproject.toml
logs/: app.jsonl  app.log.jsonl  app_wide_log.jsonl
outputs/: MBTCP_raw_fields.json
src/icsd_surrogate/analyzers/: dynamic_field_analyzer.py  protocol_explorer.py
src/icsd_surrogate/results/: packet_struct.py
src/icsd_surrogate/runnables/: runner.py
src/proteus/: __init__.py  proteusd.py
src/proteus/analyzers/: dynamic_field_analyzer.py  protocol_explorer.py
src/proteus/model/: cli_branding.py  field_behavior.py  raw_field.py
src/proteus/results/: packet_struct.py
src/proteus/utils/: __init__.py  constants.py  packet_manipulator.py  response_validator.py  socket_manager.py
