#:schema https://json.schemastore.org/pyproject.json
#:schmea https://json.schemastore.org/ruff.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/icsd_surrogate"]

[project]
name = "icsd_surrogate"
version = "0.1.0"
description = "The ICSClone progression"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "mypy",
    "pyright",
    "readmeai",
    "pre-commit",
    "rich>=14.3.2",
    "plotly>=6.5.2",
    "protocol-validator",
    "protocol-server",
    "ty>=0.0.17",
    "logger-captain",
]

[tool.uv]
managed = true

[tool.uv.sources]
protocol-validator = { path = "../../../projects/protocol-validator/dist/protocol_validator-0.1.0-py3-none-any.whl" }
protocol-server = { path = "../../../projects/protocol-server/dist/protocol_server-0.1.0-py3-none-any.whl" }
logger-captain = { path = "../../../projects/logger-captain/dist/logger_captain-0.1.0-py3-none-any.whl" }

[tool.ruff]
line-length = 180
target-version = "py312"
exclude = [".git", ".mypy_cache", ".ruff_cache", "node_modules", "venv", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR0913",
    "PLR2004",
    "G004",
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "INP001",
    "ANN401",
    "COM812",
    "TRY003",
    "EM101",
    "EM102",
    "ERA001",
    "BLE001",
    "T201",
    "S311",
    "C408",
    "S101",
    "PERF203",
]
unfixable = ["F401"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = "./.venv/bin/python"
python-version = "3.12"
root = ["src"]

[tool.ty.rules]
all = "error"
