#:schema https://json.schemastore.org/pyproject.json
#:schmea https://json.schemastore.org/ruff.json

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/proteus"]

[project]
name = "proteus"
version = "0.1.0"
description = "The ICSClone progression"
requires-python = ">=3.12"
dependencies = [
    "ruff",
    "mypy",
    "pyright",
    "readmeai",
    "pre-commit",
    "rich>=14.3.2",
    "plotly>=6.5.2",
    "ty>=0.0.17",
    "decimalog",
    "praetor",
    "cursusd",
    "click>=8.3.1",
]

[tool.uv]
managed = true

[tool.uv.sources]
praetor = { git = "https://github.com/cvasilatos/praetor.git" }
cursusd = { git = "https://github.com/cvasilatos/cursusd.git" }
decimalog = { git = "https://github.com/cvasilatos/decimalog.git" }

[tool.ruff]
line-length = 180
target-version = "py312"
exclude = [".git", ".mypy_cache", ".ruff_cache"]
src = ["./src"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "PLR0913",
    "PLR2004",
    "G004",
    "INP001",
    "ANN401",
    "COM812",
    "TRY003",
    "EM101",
    "EM102",
    "ERA001",
    "BLE001",
    "T201",
    "S311",
    "C408",
    "S101",
    "PERF203",
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.environment]
python = "./.venv/bin/python"
python-version = "3.12"
root = ["src"]

[tool.ty.rules]
all = "error"
